feat(port): Port recipes and BEs (#24)
* feat(port): Port recipes

* feat(port): Recipe Unlocking

* feat(port): Port BlockEntities

* feat(port): Eating Effects