@@ -1,60 +1,54 @@
 package net.satisfy.farm_and_charm.core.block.entity;
 
-import com.mojang.datafixers.util.Pair;
+import com.mojang.serialization.DataResult;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.world.effect.MobEffect;
-import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.nbt.NbtOps;
+import net.minecraft.nbt.Tag;
 import net.minecraft.world.effect.MobEffects;
+import net.minecraft.world.food.FoodProperties;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
-import net.satisfy.farm_and_charm.core.item.food.EffectFoodHelper;
+import net.satisfy.farm_and_charm.core.item.food.FoodEffectData;
 import net.satisfy.farm_and_charm.core.registry.EntityTypeRegistry;
 import org.apache.commons.compress.utils.Lists;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class EffectFoodBlockEntity extends BlockEntity {
     public static final String STORED_EFFECTS_KEY = "StoredEffects";
-    private List<Pair<MobEffectInstance, Float>> effects;
+    private FoodEffectData effectData;
 
     public EffectFoodBlockEntity(BlockPos blockPos, BlockState blockState) {
         super(EntityTypeRegistry.EFFECT_FOOD_BLOCK_ENTITY.get(), blockPos, blockState);
     }
 
     @SuppressWarnings("all")
-    public void addEffects(List<Pair<MobEffectInstance, Float>> effects) {
-        List<Pair<MobEffectInstance, Float>> filteredEffects = effects.stream()
-                .filter(effectPair -> effectPair.getFirst().getEffect() != MobEffects.HUNGER)
-                .collect(Collectors.toList());
-
-        this.effects = filteredEffects;
+    public void addEffects(List<FoodProperties.PossibleEffect> effects) {
+        this.effectData = new FoodEffectData(effects.stream()
+                .filter(e -> e.effect() != MobEffects.HUNGER).toList()
+        );
     }
 
-    public List<Pair<MobEffectInstance, Float>> getEffects() {
-        return effects != null ? effects : Lists.newArrayList();
-    }
-
-    @Override
-    public void load(CompoundTag nbt) {
-        super.load(nbt);
-        this.effects = EffectFoodHelper.fromNbt(nbt != null ? nbt.getList(STORED_EFFECTS_KEY, 10) : new ListTag());
+    public List<FoodProperties.PossibleEffect> getEffectData() {
+        return effectData != null ? effectData.effects() : Lists.newArrayList();
     }
 
     @Override
-    protected void saveAdditional(CompoundTag nbt) {
-        super.saveAdditional(nbt);
-        if (effects == null) {
-            return;
-        }
-        ListTag nbtList = new ListTag();
-        for (Pair<MobEffectInstance, Float> effect : effects) {
-            nbtList.add(EffectFoodHelper.createNbt((short) MobEffect.getId(effect.getFirst().getEffect()), effect));
+    protected void loadAdditional(CompoundTag nbt, HolderLookup.Provider provider) {
+        super.loadAdditional(nbt, provider);
+        this.effectData = FoodEffectData.CODEC.decode(
+                NbtOps.INSTANCE, nbt.getList(STORED_EFFECTS_KEY, 10)
+        ).getOrThrow().getFirst();
+    }
 
-        }
-        nbt.put(STORED_EFFECTS_KEY, nbtList);
+    @Override
+    protected void saveAdditional(CompoundTag nbt, HolderLookup.Provider provider) {
+        super.saveAdditional(nbt, provider);
+        if (effectData == null) return;
+        DataResult<Tag> encoded = FoodEffectData.CODEC.encodeStart(NbtOps.INSTANCE, effectData);
+        if (encoded.result().isPresent()) nbt.put(STORED_EFFECTS_KEY, encoded.getOrThrow());
     }
 }
 
